<resources>
    <string name="app_name">ForBuy</string>
    <string name="enter">Log in</string>
    <string name="reg">Register</string>
    <string name="parol">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="all_fields">Fill in all fields</string>
    <string name="password_label">Password must be without spaces and at least 6 characters</string>
    <string name="correct_email">Enter the email correctly</string>
    <string name="internet_error">Error connecting to the Internet</string>
    <string name="auth_success">Authorization successful</string>
    <string name="auth_fail">Authorization failed. Check the entered data</string>
    <string name="register_success">Registration successful</string>
    <string name="register_fail">Registration failed, it is possible that such mail is already registered</string>
    <string name="form_price">Forming</string>
    <string name="load_more">Load more</string>
    <string name="goods_added_before">The product removed from the favorites</string>
    <string name="goods_added">The product is added to favorites</string>
    <string name="logout">Log out</string>
    <string name="chosen">Favorites</string>
    <string name="search_hint">Enter the product name</string>
    <string name="loading">Loading</string>
    <string name="goods_no_loaded">Not all products have been loaded, please wait</string>
    <string name="main">Home</string>
    <string name="chosen_empty">There are no products in the favorites</string>
    <string name="up">In ascending</string>
    <string name="down">In descending</string>
    <string name="def">Default</string>
    <string name="reload">Reload</string>
    <string name="theme">Theme</string>
    <string name="about">About us</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="settings_header">Settings</string>
    <string name="another">Another</string>
    <string name="message_text">Changing the theme may reload the application. Continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>

    <string name="balloon1">In this field you need to enter the name of the product that you want to find.</string>
    <string name="balloon2">Here you can switch between stores.</string>
    <string name="balloon3">Found products will be displayed here.</string>
    <string name="balloon4">Using this panel, you can switch between "Home" and "Favorites".</string>
    <string name="balloon5">Favorite products will be displayed here.</string>
    <string name="balloon6">Here you can choose how to sort your favorites.</string>
    <string name="balloon7">This button can be used to update the list of favorites.</string>
    <string name="balloon8">You can change the theme and other settings here.</string>
    <string name="balloon9">If you have any questions, please click here to get training. Good luck!</string>
</resources>